--- a/app/src/main/res/layout/fragment_browse_recipes.xml
+++ b/app/src/main/res/layout/fragment_browse_recipes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.allrecipes.AllRecipesFragment">
+    tools:context=".ui.browserecipes.BrowseRecipesFragment">
 
     <TextView
         android:id="@+id/text2"
