--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -5,11 +5,17 @@
     android:id="@+id/mobile_navigation"
     app:startDestination="@+id/navigation_all_recipes">
 
+<!--    <fragment-->
+<!--        android:id="@+id/navigation_all_recipes"-->
+<!--        android:name="com.example.recipesphere.ui.browserecipes.BrowseRecipesFragment"-->
+<!--        android:label="@string/title_all_recipes"-->
+<!--        tools:layout="@layout/fragment_browse_recipes" />-->
+
     <fragment
         android:id="@+id/navigation_all_recipes"
-        android:name="com.example.recipesphere.ui.browserecipes.BrowseRecipesFragment"
+        android:name="com.example.recipesphere.ui.general.recipeslist.RecipesListFragment"
         android:label="@string/title_all_recipes"
-        tools:layout="@layout/fragment_browse_recipes" />
+        tools:layout="@layout/fragment_recipes_list" />
 
     <fragment
         android:id="@+id/navigation_add_recipe"
