--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/registerFragment"
-        android:name="com.example.recipesphere.ui.RegisterFragment"
+        android:name="com.example.recipesphere.ui.auth.RegisterFragment"
         android:label="Register">
         <action
             android:id="@+id/action_registerFragment_to_signInFragment"
@@ -16,6 +16,9 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.example.recipesphere.ui.SignInFragment"
+        android:name="com.example.recipesphere.ui.auth.SignInFragment"
         android:label="Sign In"/>
+    <action
+        android:id="@+id/action_signInFragment_to_registerFragment"
+        app:destination="@id/registerFragment" />
 </navigation>
