--- a/app/src/main/res/layout/fragment_browse_recipes.xml
+++ b/app/src/main/res/layout/fragment_browse_recipes.xml
@@ -32,11 +32,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
 
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvRecipes"
+        android:clipToPadding="false"
+        android:padding="8dp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="1dp"
-        app:layout_constraintTop_toBottomOf="@+id/etSearch" />
+        tools:listitem="@layout/recipe_list_item"
+        app:layout_constraintTop_toBottomOf="@+id/etSearch"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
