--- a/app/src/main/res/layout/fragment_add_recipe.xml
+++ b/app/src/main/res/layout/fragment_add_recipe.xml
@@ -1,22 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.addrecipe.AddRecipeFragment">
+    android:padding="16dp">
 
-    <TextView
-        android:id="@+id/text2"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="wrap_content">
+
+        <EditText
+            android:id="@+id/etRecipeName"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter your recipe's name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivRecipeImage"
+            android:layout_width="0dp"
+            android:layout_height="150dp"
+            android:src="@drawable/add_photo"
+            android:contentDescription="Take a picture of the dish"
+            app:layout_constraintTop_toBottomOf="@id/etRecipeName"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <EditText
+            android:id="@+id/etIngredients"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:hint="Add recipe ingredients..."
+            android:inputType="textMultiLine"
+            app:layout_constraintTop_toBottomOf="@id/ivRecipeImage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <EditText
+            android:id="@+id/etInstructions"
+            android:layout_width="0dp"
+            android:layout_height="100dp"
+            android:hint="Add recipe instructions..."
+            android:inputType="textMultiLine"
+            app:layout_constraintTop_toBottomOf="@id/etIngredients"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+        <EditText
+            android:id="@+id/etPreparationTime"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter preparation time"
+            app:layout_constraintTop_toBottomOf="@id/etInstructions"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/etDifficultyLevel"
+            android:layout_marginTop="16dp" />
+
+        <EditText
+            android:id="@+id/etDifficultyLevel"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:hint="Enter difficulty level (1-5)"
+            app:layout_constraintTop_toBottomOf="@id/etInstructions"
+            app:layout_constraintStart_toEndOf="@id/etPreparationTime"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp" />
+
+        <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Submit Recipe"
+            app:layout_constraintTop_toBottomOf="@id/etPreparationTime"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="16dp" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
