--- a/app/src/main/res/layout/fragment_single_recipe.xml
+++ b/app/src/main/res/layout/fragment_single_recipe.xml
@@ -112,12 +112,22 @@
 
     <!-- Total Nutrition (Placeholder) -->
     <TextView
-        android:id="@+id/tvTotalNutrition"
+        android:id="@+id/tvCuisineType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="later"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/tvHealthLabel"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="4dp" />
+
+    <TextView
+        android:id="@+id/tvMealType"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="later"
+        android:textSize="14sp"
+        app:layout_constraintTop_toBottomOf="@id/tvCuisineType"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="4dp" />
 
@@ -129,7 +139,7 @@
         android:text="Ingredients:"
         android:textStyle="bold"
         android:textSize="16sp"
-        app:layout_constraintTop_toBottomOf="@id/tvTotalNutrition"
+        app:layout_constraintTop_toBottomOf="@id/tvMealType"
         app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="16dp" />
 
