--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/itemRecipe"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -76,5 +77,22 @@
         app:layout_constraintLeft_toRightOf="@+id/imgTimeIcon"
         android:layout_marginStart="4dp"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/deletebtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="5dp"
+        app:layout_constraintEnd_toStartOf="@+id/editbtn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/delete_photo" />
+
+    <ImageView
+        android:id="@+id/editbtn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/edit_photo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
