--- a/app/src/main/res/layout/recipe_list_item.xml
+++ b/app/src/main/res/layout/recipe_list_item.xml
@@ -7,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
-    android:background="@android:color/white"
+    android:background="@android:color/holo_green_light"
     android:padding="8dp">
 
     <ImageView
